DepartureBoardWeb/ClientApp/src/app/nav-menu/nav-menu.component.css
html {
  font-size: 14px;
}
@media (min-width: 768px) {
  html {
    font-size: 16px;
  }
}

.nav-link {
  color: var(--mainColour) !important;
}

.sidenav-container {
  margin-top: 5px;
}

.sidenav {
  width: 300px;
  border: 0;
}

/*Pads Icons*/
.sidenav .fa,
.sidenav .fas,
.sidenav .far {
  padding-right: 10px;
}

.logo {
  height: 20px;
  margin-right: 10px;
}

.navbar {
  height: 35px;
}

.page-selected {
  font-weight: bold;
}

.dropdown-toggle {
  background-color: black;
  color: var(--mainColour);
  border: 0;
}

.bottom-nav-items {
  position: absolute;
  bottom: 0px;
  width: 100%;
}

.container-fluid {
  padding-right: 0;
  padding-left: 10px;
  background-color: var(--backgroundColour);
}

.mat-drawer-container {
  background-color: var(--backgroundColour);
}

